fixed wrapping of tags on home/index template

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -45,3 +45,7 @@ pre code {
     margin-top: 45px;
     padding: 35px 0 36px;
 }
+
+span.tag {
+    white-space: nowrap;
+}
